# A309370

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Elem.h  README.md  compile_commands.json  erdos421  main.cpp  run  run.sh  treap.h
.github/workflows/: test.yml
A002326/: CMakeLists.txt  lib.h  main.cpp
A045345/: CMakeLists.txt  lib.h  main.cpp
A090245/: main.cpp
A123132/: CMakeLists.txt  README.md  main.cpp
A140866/: CMakeLists.txt  main.cpp
A309370/: CMakeLists.txt  Elem.h  main.cpp
A388850/: main.cpp
A389544/: CMakeLists.txt  explanation.md  lib.h  main.cpp
A390848/: b390848.txt  main.cpp
benchmark/: BigIntBench.cpp  CMakeLists.txt  PrimeBench.cpp  PrimeIntBench.cpp
benchmark/results/: bigint
scripts/: reindex_bfile.py
template/: main.cpp
tests/: CMakeLists.txt  testBigInt.cpp  testExSeq.cpp  testLogInt.cpp  testPrime.cpp  testPrimeInt.cpp  testTreap.cpp
utils/: BigInt.cpp  BigInt.h  CMakeLists.txt  DecBigInt.cpp  DecBigInt.h  DenseBigInt.cpp  DenseBigInt.h  Integer.cpp  Integer.h  LogInt.cpp  LogInt.h  ModInt.cpp  ModInt.h  MoreMath.cpp  MoreMath.h  Prime.h  PrimeFactorizer.cpp  PrimeFactorizer.h  PrimeInt.cpp  PrimeInt.h  Treap.cpp  Treap.h  Utils.h  main.cpp  treap.h  utils.h
utils/tests/: testInteger.cpp  testPrime.cpp  testTreap.cpp
